# connectedhomeip

./: .gitmodules
examples/light-switch-app/Lightning/: CMakeLists.txt  ProjModuleCollect.cmake
examples/light-switch-app/Lightning/bsp/: serial_h4tl_driver.c  serial_hw.c  serial_hw.h
examples/light-switch-app/Lightning/cfg/: flash_partition_cfg.json  ln882h.sct  proj_config.h
examples/light-switch-app/Lightning/include/: usr_app.h
examples/light-switch-app/Lightning/src/: main.c  main.cpp  usr_app.c
examples/platform/lightning/common/: CHIPDeviceManager.cpp
examples/platform/lightning/gcc/: gcc-compiler-flags.cmake  gcc-custom-build-stage.cmake  gcc-toolchain-setup.cmake
examples/platform/lightning/startup/: startup_ln882h_gcc.c
src/platform/: BUILD.gn  device.gni
src/platform/LIghtning/: BLEManagerImpl.cpp  BLEManagerImpl.h  CHIPDevicePlatformEvent.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  KeyValueStoreManagerImpl.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h
